src/test/deca/syntax/invalid/class/decl_meth_sans_param.deca
/*
	Description: declaration une methode sans les paranthèses de paramètre

	Resultat syntaxiquement invalid

	Date: 20/01/2020

*/



class a extends b{
	

	protected z= 23;


}
